--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,25 +1,41 @@
-/* CSS untuk Footer */
 .footer {
-  background-color: #333; /* Warna latar belakang footer */
-  color: #fff; /* Warna teks */
-  padding: 20px 0; /* Padding atas dan bawah */
-  text-align: center;
-}
-
-.footer-container {
+  background-color: white;
+  padding: 20px;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
 }
 
 .footer-logo {
-  font-size: 1.5rem; /* Ukuran font untuk logo */
+  display: flex;
+  margin: 30px;
+  margin-top: 30px;
 }
 
-.footer-links a {
-  color: #fff; /* Warna teks tautan */
-  text-decoration: none; /* Menghilangkan garis bawah dari tautan */
-  margin: 0 10px; /* Jarak antara tautan */
+.logo {
+  margin: 30px;
+}
+
+.copyright {
+  font-size: 14px;
+  margin-top: 50px;
+}
+
+.content {
+  font-size: 14px;
+}
+
+.ContactLogo {
+  height: 20px;
+  margin-right: 10px;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.title {
+  font-weight: bold;
+  color: gray;
 }
